--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.14.2",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "axios": "^1.10.0",
+    "framer-motion": "^12.19.1",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
